# adaptive-lora-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_HUGGINGFACE.md  Dockerfile  Makefile  README.md  SETUP_RAILWAY.md  SPACE_README.md  app.py  docker-compose.prod.yml  docker-compose.yml  fix_transformers.py  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements-dev.txt  requirements.txt  requirements_space.txt  setup.py
.github/workflows/: ci.yml
configs/: monitoring.yaml  system.yaml
configs/adapters/: analysis_adapter.yaml  base_adapter.yaml  code_adapter.yaml  reasoning_adapter.yaml
configs/router/: router_config.yaml  training_config.yaml
configs/serving/: development.yaml  production.yaml  staging.yaml
database/: README.md  schema.sql
deploy/: api_gateway.py  modal_inference.py  requirements-gateway.txt
docs/: api_documentation.md  architecture.md  colab_deployment.md  deployment_guide.md  serverless_deployment.md
experiments/: ablation_studies.py  benchmark_inference.py  evaluate_system.py  hyperparameter_search.py  train_adapters.py  train_router.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secrets.yaml.template  servicemonitor.yaml
k8s/grafana/: adapter-dashboard.json  main-dashboard.json
monitoring/: prometheus.yml
notebooks/: colab_production_server.ipynb  train_adapter.ipynb
scripts/: auto_retrain.py  backup.sh  deploy.sh  download_models.py  generate_api_docs.py  migrate_models.py  prepare_data.py  run_gradio_server.py  setup_environment.sh
src/: __init__.py
src/adapters/: __init__.py  adapter_manager.py  hierarchical_lora.py  lora_trainer.py
src/config/: __init__.py  base_config.py  model_configs.yaml  settings.py
src/data/: __init__.py  adversarial_generator.py  augmentation.py  data_loader.py  (+3 more)
tests/: conftest.py  test_adapters.py  test_api.py  test_config.py  test_data.py  test_evaluation.py  test_inference.py  test_monitoring.py  test_router.py
(+32 files in other folders)
